feat: web shortcuts

--- a/newtab.html
+++ b/newtab.html
@@ -70,38 +70,169 @@
       border-radius: 12px;
       backdrop-filter: blur(10px);
       margin-top: 20px;
+      border-radius: 22px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
     }
 
-    .shortcut {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-decoration: none;
-      color: white;
-      padding: 10px;
-      border-radius: 8px;
-    }
+.shortcut {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 16px;
+  text-decoration: none;
+  color: white;
+  transition: all 0.2s ease;
+  padding: 16px;
+  border-radius: 22px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
 
-    .shortcut:hover {
-      background: rgba(255, 255, 255, 0.1);
-    }
+.shortcut:hover {
+  background: rgba(255, 255, 255, 0.15);
+  transform: translateY(-2px);
+}
 
-    .shortcut img {
-      width: 48px;
-      height: 48px;
-      border-radius: 50%;
-      margin-bottom: 8px;
-      background: #4a3b59;
-    }
+.shortcut img {
+  width: 48px;
+  height: 48px;
+  border-radius: 12px;
+  margin-bottom: 8px;
+  object-fit: cover;
+}
 
-    .shortcut span {
-      text-align: center;
-      font-size: 14px;
-      max-width: 100px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
+.shortcut span {
+  font-size: 14px;
+  text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 100%;
+}
+
+.add-button {
+  cursor: pointer;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 16px;
+}
+
+.add-button .shortcut-icon {
+  font-size: 24px;
+  margin-bottom: 8px;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.shortcut-dialog {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2000;
+}
+
+.dialog-content {
+  background: #2c2435;
+  padding: 24px;
+  border-radius: 16px;
+  width: 400px;
+  box-shadow: 0 4px 32px rgba(0, 0, 0, 0.2);
+}
+
+.dialog-content h3 {
+  color: white;
+  margin: 0 0 16px;
+  font-size: 18px;
+}
+
+.dialog-content input {
+  width: 100%;
+  margin-bottom: 16px;
+  padding: 12px 16px;
+  border-radius: 8px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.05);
+  color: white;
+  font-size: 14px;
+}
+
+.dialog-content input:focus {
+  outline: none;
+  border-color: rgba(255, 255, 255, 0.3);
+}
+
+.dialog-buttons {
+  display: flex;
+  justify-content: flex-end;
+  gap: 8px;
+}
+
+.dialog-buttons button {
+  padding: 8px 16px;
+  border-radius: 8px;
+  border: none;
+  background: rgba(255, 255, 255, 0.1);
+  color: white;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.dialog-buttons .add-btn {
+  background: #6f42c1;
+}
+
+.dialog-buttons button:hover {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.dialog-buttons .add-btn:hover {
+  background: #7d4fd4;
+}
+
+.remove-shortcut {
+  position: absolute;
+  top: 6px;
+  right: 6px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: none;
+  background: rgba(0, 0, 0, 0.2);
+  color: rgba(255, 255, 255, 0.7);
+  cursor: pointer;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  transition: all 0.2s ease;
+  backdrop-filter: blur(4px);
+  transform: scale(1.1);
+}
+
+.remove-shortcut svg {
+  width: 12px;
+  height: 12px;
+  transform: scale(0.9);
+  transition: transform 0.2s ease;
+}
+
+.shortcut:hover .remove-shortcut {
+  display: flex;
+}
+
+.remove-shortcut:hover {
+  background: rgba(161, 44, 40, 0.8);
+  color: white;
+  
+}
+    
   </style>
 </head>
 <body>
