--- a/newtab.html
+++ b/newtab.html
@@ -57,7 +57,7 @@
     }
 
     #search-input:focus {
-      background: rgba(255, 255, 255, 0.01);
+      background: rgba(255, 255, 255, 0.001);
       border-color: rgba(255, 255, 255, 0.3);
     }
 
@@ -153,7 +153,7 @@
 }
 
 .dialog-content input {
-  width: 100%;
+  width: 91%;
   margin-bottom: 16px;
   padding: 12px 16px;
   border-radius: 8px;
@@ -172,6 +172,7 @@
   display: flex;
   justify-content: flex-end;
   gap: 8px;
+  margin-top: 8px;
 }
 
 .dialog-buttons button {
@@ -186,6 +187,8 @@
 
 .dialog-buttons .add-btn {
   background: #6f42c1;
+  margin-left: 5px;
+  margin-right: 7px;
 }
 
 .dialog-buttons button:hover {
