--- a/newtab.html
+++ b/newtab.html
@@ -259,6 +259,48 @@ body.offline {
 body.offline .offline-alert {
   display: block;
 }
+
+.shortcut-icon {
+  position: relative;
+  display: inline-flex;
+}
+
+.edit-shortcut {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: none;
+  background: rgba(0, 0, 0, 0.2);
+  color: rgba(255, 255, 255, 0.7);
+  cursor: pointer;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  transition: all 0.2s ease;
+  backdrop-filter: blur(4px);
+}
+
+.shortcut:hover .edit-shortcut {
+  display: flex;
+}
+
+.edit-shortcut:hover {
+  background: rgba(111, 66, 193, 0.8);
+  color: white;
+}
+
+.shortcut.dragging {
+  opacity: 0.5;
+  cursor: move;
+}
+
+.shortcut.drag-over {
+  border: 2px solid rgba(111, 66, 193, 0.5);
+}
     
 </style>
 </head>
