fix: Red Argon by applying Chrome's default searchbar

--- a/newtab.html
+++ b/newtab.html
@@ -310,11 +310,10 @@ body.offline .offline-alert {
   </div>
   <div id="overlay"></div>
   <div id="content">
-    <form id="search-form" action="https://www.google.com/search" method="get">
+    <form id="search-form">
       <input type="text" 
              id="search-input" 
-             name="q" 
-             placeholder="Search Google or type a URL"
+             placeholder="Search or type a URL"
              autocomplete="off"
              autofocus>
     </form>
