--- a/newtab.html
+++ b/newtab.html
@@ -35,8 +35,9 @@
     }
 
     #search-form {
-      width: 600px;
+      width: 660px;
       margin-bottom: 30px;
+      margin-left: -24px;
     }
 
     #search-input {
@@ -312,10 +313,10 @@ body.offline .offline-alert {
   <div id="content">
     <form id="search-form">
       <input type="text" 
-             id="search-input" 
-             placeholder="Search or type a URL"
-             autocomplete="off"
-             autofocus>
+       id="search-input" 
+       placeholder="Search or type a URL"
+       autocomplete="off"
+       autofocus>
     </form>
     <div id="shortcuts"></div>
   </div>
