remove: search option :')

--- a/newtab.html
+++ b/newtab.html
@@ -314,7 +314,7 @@ body.offline .offline-alert {
     <form id="search-form">
       <input type="text" 
        id="search-input" 
-       placeholder="Search or type a URL"
+       placeholder="Type a URL"
        autocomplete="off"
        autofocus>
     </form>
